syntax = "proto3";

package api.user.v1;

import "api/types/types.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "tagger/tagger.proto";
//import "validate/validate.proto";

option go_package = "user/api/user/v1;v1";

// Default settings for generating swagger documents
// NOTE: because json does not support 64 bits, the int64 and uint64 types under *.swagger.json are automatically converted to string types
// Reference https://github.com/grpc-ecosystem/grpc-gateway/blob/db7fbefff7c04877cdb32e16d4a248a024428207/examples/internal/proto/examplepb/a_bit_of_everything.proto  
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  host: "localhost:8080"
  base_path: ""
  info: {
    title: "user api docs";
    version: "2.0";
  }
  schemes: HTTP;
  schemes: HTTPS;
  consumes: "application/json";
  produces: "application/json";
  security_definitions: {
    security: {
      key: "BearerAuth";
      value: {
        type: TYPE_API_KEY;
        in: IN_HEADER;
        name: "Authorization";
        description: "Input a \"Bearer your-jwt-token\" to Value";
      }
    }
  }
};

service teacherService {
  rpc Create(CreateTeacherRequest) returns (CreateTeacherReply) {
    option (google.api.http) = {
      post: "/api/v1/teacher"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "create teacher",
      description: "submit information to create teacher",
      tags: "teacher",
    };
  }

  rpc DeleteByID(DeleteTeacherByIDRequest) returns (DeleteTeacherByIDReply) {
    option (google.api.http) = {
      delete: "/api/v1/teacher/{id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "delete teacher",
      description: "delete teacher by id",
      tags: "teacher",
      //security: {
      //  security_requirement: {
      //    key: "BearerAuth";
      //    value: {}
      //  }
      //}
    };
  }

  rpc DeleteByIDs(DeleteTeacherByIDsRequest) returns (DeleteTeacherByIDsReply) {
    option (google.api.http) = {
      post: "/api/v1/teacher/delete/ids"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "delete teachers by batch id",
      description: "delete teachers by batch id",
      tags: "teacher",
      //security: {
      //  security_requirement: {
      //    key: "BearerAuth";
      //    value: {}
      //  }
      //}
    };
  }

  rpc UpdateByID(UpdateTeacherByIDRequest) returns (UpdateTeacherByIDReply) {
    option (google.api.http) = {
      put: "/api/v1/teacher/{id}"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "update teacher",
      description: "update teacher by id",
      tags: "teacher",
      //security: {
      //  security_requirement: {
      //    key: "BearerAuth";
      //    value: {}
      //  }
      //}
    };
  }

  rpc GetByID(GetTeacherByIDRequest) returns (GetTeacherByIDReply) {
    option (google.api.http) = {
      get: "/api/v1/teacher/{id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "get teacher detail",
      description: "get teacher detail by id",
      tags: "teacher",
      //security: {
      //  security_requirement: {
      //    key: "BearerAuth";
      //    value: {}
      //  }
      //}
    };
  }

  rpc ListByIDs(ListTeacherByIDsRequest) returns (ListTeacherByIDsReply) {
    option (google.api.http) = {
      post: "/api/v1/teacher/list/ids"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "list of teachers by batch id",
      description: "list of teachers by batch id",
      tags: "teacher",
      //security: {
      //  security_requirement: {
      //    key: "BearerAuth";
      //    value: {}
      //  }
      //}
    };
  }

  rpc List(ListTeacherRequest) returns (ListTeacherReply) {
    option (google.api.http) = {
      post: "/api/v1/teacher/list"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "list of teachers by parameters",
      description: "list of teachers by paging and conditions",
      tags: "teacher",
      //security: {
      //  security_requirement: {
      //    key: "BearerAuth";
      //    value: {}
      //  }
      //}
    };
  }
}

// Some notes on defining fields under message:
// (1) Fill in the validate rules https://github.com/envoyproxy/protoc-gen-validate#constraint-rules
// (2) When using the protoc-gen-openapiv2 plugin, if the defined fields are snake case,
//      you must add annotations for snake case names, such as string foo_bar = 1 [json_name = "foo_bar"],
//      to ensure that the front end and back end JSON naming is consistent.
// (3) If the declared route path includes a variable, such as /api/v1/teacher/{id},
//      the request parameter of the rpc method contains the route variable field and this field
//      must be annotated, such as int64 id = 1 [(tagger.tags) = "uri:\"id\"" ]


message CreateTeacherRequest {
	string name = 1;  // 用户名
	string password = 2;  // 密码
	string email = 3;  // 邮件
	string phone = 4;  // 手机号码
	string avatar = 5;  // 头像
	int32 gender = 6;  // 性别，1:男，2:女，其他值:未知
	int32 age = 7;  // 年龄
	string birthday = 8;  // 出生日期
	string schoolName = 9;  // 学校名称
	string college = 10;  // 学院
	string title = 11;  // 职称
	string profile = 12;  // 个人简介
}

message CreateTeacherReply {
  uint64   id =1;
}

message DeleteTeacherByIDRequest {
  uint64   id =1 [(tagger.tags) = "uri:\"id\"" ];
}

message DeleteTeacherByIDReply {

}

message DeleteTeacherByIDsRequest {
  repeated uint64 ids = 1;
}

message DeleteTeacherByIDsReply {

}

message UpdateTeacherByIDRequest {
	uint64 id = 1 [(tagger.tags) = "uri:\"id\"" ]; 
	string name = 2;  // 用户名
	string password = 3;  // 密码
	string email = 4;  // 邮件
	string phone = 5;  // 手机号码
	string avatar = 6;  // 头像
	int32 gender = 7;  // 性别，1:男，2:女，其他值:未知
	int32 age = 8;  // 年龄
	string birthday = 9;  // 出生日期
	string schoolName = 10;  // 学校名称
	string college = 11;  // 学院
	string title = 12;  // 职称
	string profile = 13;  // 个人简介
}

message UpdateTeacherByIDReply {

}

message Teacher {
	uint64 id = 1; 
	int64 createdAt = 2; 
	int64 updatedAt = 3; 
	string name = 4;  // 用户名
	string password = 5;  // 密码
	string email = 6;  // 邮件
	string phone = 7;  // 手机号码
	string avatar = 8;  // 头像
	int32 gender = 9;  // 性别，1:男，2:女，其他值:未知
	int32 age = 10;  // 年龄
	string birthday = 11;  // 出生日期
	string schoolName = 12;  // 学校名称
	string college = 13;  // 学院
	string title = 14;  // 职称
	string profile = 15;  // 个人简介
}

message GetTeacherByIDRequest {
  uint64   id =1 [(tagger.tags) = "uri:\"id\"" ];
}

message GetTeacherByIDReply {
  Teacher teacher = 1;
}

message ListTeacherByIDsRequest {
  repeated uint64 ids = 1;
}

message ListTeacherByIDsReply {
  repeated Teacher teachers = 1;
}

message ListTeacherRequest {
  types.Params params = 1;
}

message ListTeacherReply {
  int64 total =1;
  repeated Teacher teachers = 2;
}


